--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "build/index.d.ts",
     "repository": "https://github.com/comparaonline/mono-client.git",
     "engines": {
-        "node": ">=14.17.0"
+        "node": ">=16.20.0"
     },
     "scripts": {
         "build": "tsc",
@@ -38,28 +38,29 @@
     ],
     "dependencies": {
         "express": "^4.18.2",
+        "joi": "^17.10.2",
         "joi-to-swagger": "^6.2.0",
         "swagger-ui-express": "^5.0.0",
         "ts-json-schema-generator": "^1.3.0"
     },
     "devDependencies": {
-        "ts-standard": "^12.0.2",
-        "http-status-codes": "^2.3.0",
-        "@types/swagger-ui-express": "^4.1.4",
         "@types/express": "^4.17.18",
         "@types/jest": "^29.2.4",
         "@types/node": "^18.11.15",
+        "@types/swagger-ui-express": "^4.1.4",
         "@typescript-eslint/eslint-plugin": "^5.46.1",
         "@typescript-eslint/parser": "^5.1.0",
         "eslint": "8.2.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-prettier": "^4.0.0",
+        "http-status-codes": "^2.3.0",
         "jest": "^29.3.1",
         "prettier": "^2.4.1",
         "ts-jest": "^29.0.3",
         "ts-node": "^10.4.0",
         "ts-prune": "^0.10.3",
+        "ts-standard": "^12.0.2",
         "typescript": "^4.9.4"
     }
 }
