--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@types/express": "^4.17.18",
         "@types/jest": "^29.2.4",
         "@types/node": "^18.11.15",
+        "@types/supertest": "^2.0.14",
         "@types/swagger-ui-express": "^4.1.4",
         "@typescript-eslint/eslint-plugin": "^5.46.1",
         "@typescript-eslint/parser": "^5.1.0",
@@ -57,6 +58,7 @@
         "http-status-codes": "^2.3.0",
         "jest": "^29.3.1",
         "prettier": "^2.4.1",
+        "supertest": "^6.3.3",
         "ts-jest": "^29.0.3",
         "ts-node": "^10.4.0",
         "ts-prune": "^0.10.3",
