--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,17 @@
 {
-    "compilerOptions": {
-      "target": "ES2019",
-      "module": "commonjs",
-      "declaration": true,
-      "outDir": "./build",
-      "strict": true,
-      "alwaysStrict": true,
-      "rootDir": "./src",
-      "baseUrl": "./",
-      "typeRoots": [
-        "./node_modules/@types"
-      ],
-      "types": [
-        "node",
-        "jest"
-      ],
-      "esModuleInterop": true,
-      "inlineSourceMap": true,
-      "forceConsistentCasingInFileNames": true
-    }
+  "compilerOptions": {
+    "target": "ES2019",
+    "module": "commonjs",
+    "declaration": true,
+    "outDir": "./build",
+    "strict": true,
+    "alwaysStrict": true,
+    "rootDir": "./src",
+    "baseUrl": "./",
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "jest"],
+    "esModuleInterop": true,
+    "inlineSourceMap": true,
+    "forceConsistentCasingInFileNames": true
   }
+}
