--- a/package.json
+++ b/package.json
@@ -37,14 +37,12 @@
         "swagger"
     ],
     "dependencies": {
+        "express": "^4.18.2",
         "joi": "^17.10.2",
         "joi-to-swagger": "^6.2.0",
         "swagger-ui-express": "^5.0.0",
         "ts-json-schema-generator": "^1.3.0",
         "http-status-codes": "^2.3.0"
-    },
-    "peerDependencies": {
-        "express": "^4.18.2"
     },
     "devDependencies": {
         "@types/express": "^4.17.18",
