--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@comparaonline/openapi-generator",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "Soap and rest connector",
     "main": "build/index.js",
     "types": "build/index.d.ts",
@@ -41,7 +41,8 @@
         "joi": "^17.10.2",
         "joi-to-swagger": "^6.2.0",
         "swagger-ui-express": "^5.0.0",
-        "ts-json-schema-generator": "^1.3.0"
+        "ts-json-schema-generator": "^1.3.0",
+        "http-status-codes": "^2.3.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.18",
@@ -55,7 +56,6 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-prettier": "^4.0.0",
-        "http-status-codes": "^2.3.0",
         "jest": "^29.3.1",
         "prettier": "^2.4.1",
         "supertest": "^6.3.3",
